// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow tests test 2 1`] = `
<div>
  TDD 
  <span
    onClick={[Function]}
  >
    YEIII
  </span>
  <span>
    DISABLE
  </span>
</div>
`;

exports[`Shallow tests test 3 1`] = `
<div>
  TDD 
  YONEL
  <span
    onClick={[Function]}
  >
    YEIII
  </span>
  <span>
    DISABLE
  </span>
</div>
`;
